[package]
name = "zero_trust_banking_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
chrono = "0.4"
hex = "0.4"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
tokio = { version = "1", features = ["full"] }
anyhow = "1"